--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ heading_anchors: true
 # Note: The footer_content option is deprecated and will be removed in a
 # future major release. Please use `_includes/footer_custom.html` for more
 # robust markup / liquid-based content.
-footer_content: "Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 2024-2025 TrustGraph.ai. Distributed under an <a href=\"https://github.com/trustgraph-ai/trustgraph/blob/master/LICENSE\">Apache 2 license.</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
