--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ gh_edit_branch: "main" # the branch that your docs is served from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 # A load of stuff doesn't work in dark
-color_scheme: light
+color_scheme: dark
 
 callouts:
   warning:
