--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: trustgraph.ai
-description: Information on the trustgraph.ai system
+title: TrustGraph
+description: Information on the TrustGraph platform
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
